# VirtualMeetingApp

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
accounts/: urls.py
env/: pyvenv.cfg
staticfiles/js/: meeting_room.js
virtual_app/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py
virtual_app/endpoints/: create_meeting.py  forms.py  home.py  join_meeting.py  list_participants.py  list_recordings.py  meeting.py  meeting_detail.py  meeting_room.py  profile.py  signup.py
virtual_app/migrations/: 0001_initial.py  0002_meeting_invitation_link.py
virtual_app/static/js/: meeting_room.js
virtual_app/templates/: create_meeting.html  ended.html  home.html  join_meeting.html  layout.html  list_participants.html  list_recordings.html  meeting_detail.html  meeting_invitation.html  meeting_room.html  not_started.html  profile.html  signup.html
virtual_app/templates/registration/: login.html
virtual_project/: asgi.py  settings.py  urls.py  wsgi.py
