[tool.poetry]
name = "Virtual_App"
version = "1.5.1"
description = "Virtual Meeting App"
authors = ["BrodaOJ <brodaoj@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.4"
django = "4.2.3"  # Replace "1.11.*" with the specific Django version you want to use

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

